# dlib-face-recognition

./: Cargo.toml  build.rs
src/: embed.rs  lib.rs
src/face_detection/: hog.rs
