[package]
name = "dlib-face-recognition"
version = "0.3.2"
authors = [
  "Ashley <expenses@airmail.cc>",
  "Ho Kim <great.ho.kim@gmail.com>",
  "João Pedro Sanches Dovichi <jsanchesdovichi@gmail.com>",
]
edition = "2021"

description = "Unofficial Rust wrappers to the C++ library dlib, face recognition tools"
homepage = "https://github.com/podo-os"
repository = "https://github.com/podo-os/dlib-face-recognition"
readme = "README.md"
license = "BSD-3-Clause"

build = "build.rs"

include = ["src/**/*.rs", "build.rs", "Cargo.toml", "LICENSE"]

[features]
embed-all = ["embed-fd-nn", "embed-fe-nn", "embed-lp"]
embed-any = ["reqwest", "bzip2"]

embed-fd-nn = ["embed-any"]
embed-fe-nn = ["embed-any"]
embed-lp = ["embed-any"]

[dependencies]
cpp = "0.5"
image = { version = "0.25", default-features = false }
bzip2 = { version = "0.6", optional = true }
reqwest = { version = "0.13", optional = true, features = ["blocking"] }

[build-dependencies]
cpp_build = "0.5"
sys-info = "0.9"
vcpkg = "0.2.15"
pkg-config = "0.3.32"

[dev-dependencies]
lazy_static = "1.4"
